--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "sipil-web",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "node dist/sipil-web/server/main.js",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr": "node dist/sipil-web/server/main.js",
-    "build:ssr": "ng build --prod && ng run sipil-web:server",
-    "serve:ssr:build": "npm run build:ssr && npm run serve:ssr"
-  },
+  "ng": "ng",
+  "start": "node dist/sipil-web/server/main.js",
+  "build": "ng build",
+  "build:ssr": "ng build --configuration production && ng run sipil-web:server:production",
+  "serve:ssr": "node dist/sipil-web/server/main.js",
+  "serve:ssr:build": "npm run build:ssr && npm run serve:ssr",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test"
+},
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
