--- a/angular.json
+++ b/angular.json
@@ -56,16 +56,7 @@
                 }
               }
             },
-            "prerender": {
-              "builder": "@nguniversal/builders:prerender",
-              "options": {
-                "browserTarget": "sipil-web:build:production",
-                "serverTarget": "sipil-web:server:production",
-                "routes": [
-                  "/"
-                ]
-              }
-            },
+            "prerender": true,
             "ssr": {
               "entry": "server.ts"
             }
