--- a/angular.json
+++ b/angular.json
@@ -32,30 +32,7 @@
               "src/assets/styles/css/themes/lite-blue.css"
             ],
             "scripts": [],
-            "server": {
-              "builder": "@angular-devkit/build-angular:server",
-              "options": {
-                "outputPath": "dist/sipil-web-server",
-                "main": "src/main.server.ts",
-                "tsConfig": "tsconfig.server.json"
-              },
-              "configurations": {
-                "production": {
-                  "fileReplacements": [
-                    {
-                      "replace": "src/environments/environment.ts",
-                      "with": "src/environments/environment.prod.ts"
-                    }
-                  ],
-                  "sourceMap": false,
-                  "optimization": true
-                },
-                "development": {
-                  "sourceMap": true,
-                  "optimization": false
-                }
-              }
-            },
+            "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
               "entry": "server.ts"
