--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,8 @@
                   "inlineCritical": false
                 },
                 "fonts": true
-              }
+              },
+              "outputPath": "docs"
             },
             "development": {
               "optimization": false,
