--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "sipil-web",
   "version": "0.0.0",
   "scripts": {
-  "ng": "ng",
-  "start": "node dist/sipil-web/server/main.js",
-  "build": "ng build",
-  "build:ssr": "ng build --configuration production && ng run sipil-web:server:production",
-  "serve:ssr": "node dist/sipil-web/server/main.js",
-  "serve:ssr:build": "npm run build:ssr && npm run serve:ssr",
-  "watch": "ng build --watch --configuration development",
-  "test": "ng test"
-},
+    "ng": "ng",
+    "start": "node dist/sipil-web/server/main.js",
+    "build": "ng build",
+    "build:ssr": "ng build --configuration production && ng run sipil-web:server:production",
+    "serve:ssr": "node dist/sipil-web/server/main.js",
+    "serve:ssr:build": "npm run build:ssr && npm run serve:ssr",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
